--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -294,10 +294,13 @@ a { text-decoration: none; }
   .who-we-are-child-container{
     flex: 1;
     max-height: 300px;
+    
   }
 
   .who-we-are-child-container p {
     max-width: 93%;
+    font-size: 1.15rem;
+
   }
 
   
@@ -314,13 +317,25 @@ a { text-decoration: none; }
   }
   
   .team-container{
+    padding: 1rem;
     display: flex;
     width: 100%;
+  }
+
+  .team-child-container-names{
+    flex: 1;
+
+    /* flex: ; Adjust width and spacing between items */
+    /* margin: 1rem; Adjust margin between items */
+    /* max-width: calc(20% - 2rem); Adjust max-width to maintain spacing */
   }
   
   
   .team-child-container{
-    flex: 1;
+    flex: 2;
+  /* Adjust width and spacing between items */
+    /* margin: 1rem; Adjust margin between items */
+    /* max-width: calc(20% - 2rem); Adjust max-width to maintain spacing */
   }
   
   .headshot{
@@ -336,13 +351,21 @@ a { text-decoration: none; }
   }
   
   .btn-committee-names button{
-    background-color: darkgray;
-    border:1px solid gray;
-    color: #000;
+
+    background-color: #00AFB9;
+    border: 1px solid #22457d;
+    /* background-color: #F07167; */
+    /* border-color:1px solid #22457d; */
+    a{
+      color: white;
+      font-size: medium;
+    }
+    color: white;
+    font-size: large;
     cursor:pointer;
     display: block;
-    padding: 10px 24px;
-    width: 50%;
+    padding: 10px 50px;
+    width: 70%;
   }
   
   .btn-committee-names:not(:last-child){
@@ -350,8 +373,97 @@ a { text-decoration: none; }
   }
   
   .btn-committee-names button:hover{
-    background-color: rgb(68, 68, 68);
+    background-color: rgb(255, 129, 120);
   }
+
+  .members img{
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  
+  .members{
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+  } 
+  
+  .members li{
+      float: left;
+      width: 100%;
+      list-style: none;
+  }
+  
+  
+  .members figure{
+    margin: 0 1.25em 1.25em 0;
+    position: relative;
+    text-align: center;
+    border: 0.3em solid  #00AFB9;
+    border-radius: 0.5em;
+    overflow:hidden;
+  }
+  
+  .members figure:hover{
+    border: 0.3em solid rgb(255, 129, 120);;
+    img {
+      opacity: 0.1;
+      transition: all .2s ease-in-out .2s;
+    }
+    figcaption {
+      top: 50%;
+      margin-top: -5em;
+    }
+    h3 h4 h5 {
+      bottom: 70%;
+      padding: 0;
+    }
+  
+  }
+  
+  figcaption{
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    left: 0;
+    transition: all 0.2s ease-in-out allow-discrete;
+  }
+  
+  figcaption a{
+    font-weight: bold;
+    text-decoration: none;
+    background-color: palevioletred;
+    display: inline-block;
+    text-align: center;
+    color: white;
+    border-radius: 1.25rem;
+    padding-top: 0.5em;
+    width: 10rem;
+    height: 1.5rem;
+  
+    &:hover{
+      background-color: rgb(248, 40, 109) ;
+    }
+  }
+  
+  figcaption{
+    position: absolute;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    bottom: 100%;
+    color: #000;
+      text-shadow: 0 0 5em black;
+  }
+
+
+  @media (min-width: 28.75em) {
+    .members li {
+      width:25%;
+    }
+  }
+  
   
   .about-header-container {
     padding-top: 3rem;
