--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -342,11 +342,8 @@ button:hover{ cursor: pointer; }
     }
     
     .collaborators-container{
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+      justify-items: center;
       align-items: center;
-      gap: 1em;
     }
     
     .logo-who-we-are{
