--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -33,17 +33,13 @@
   100% { transform: translate(0, -0px); }    
 }
 
-a {
-  text-decoration: none;
-}
+a { text-decoration: none; }
 
-h1 {
-  font-family: bitter;
-}
+h1 { font-family: bitter; }
 
-h2 {
-  font-family: bitter;
-}
+h2 { font-family: bitter; }
+
+button:hover{ cursor: pointer; }
 
 .navbar {
   background: white;
@@ -277,8 +273,6 @@ h2 {
   margin-bottom: clamp(1rem, 3vw, 5rem);
 }
 
-button:hover{ cursor: pointer; }
-
 .Button-home {
   position: relative;
   filter: dropshadow(color=#000, offx=0px, offy=1px);
@@ -336,143 +330,98 @@ button:hover{ cursor: pointer; }
     padding-top: 0;
     display: flex;
     column-gap: 2rem;
-  }
-  .who-we-are-child-container {
-    flex: 1;
-  }
-    
-  .collaborators-container{
-    justify-items: center;
-    align-items: center;
-  }
-    
-  .logo-who-we-are{
-    max-width: 75%;
+
+    .who-we-are-child-container {
+      flex: 1;
+    }
+
+    .collaborators-container{
+      justify-items: center;
+      align-items: center;
+    }
+      
+    .logo-who-we-are{
+      max-width: 75%;
+    }
   }
 
   .team-container{
+    padding: 1rem;
     display: flex;
     width: 100%;
 
-    .team-child-container{
-      flex: 2 1 auto;
+    .team-child-container-names {
+      margin-right: 4%;
+
+      .btn-committee-names {
+        max-width: 138px;
+        flex: 2;
+      }
+      .btn-committee-names button{
+        background-color: palevioletred;
+        border:1px solid rgb(180, 95, 124);
+        a { color: white; }
+        text-align: center;
+        cursor:pointer;
+        padding: 0.75rem 1.5rem;
+        display: block;
+        width: 100%;
+        
+      }
+
+      .btn-committee-names:not(:last-child){
+        border-bottom: none;
+      }
+
+      .btn-committee-names button:hover{
+        background-color: rgb(248, 40, 109);
+      }
+    }
+
+    .team-child-container-members {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+
+      .members img {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
+      
+      .members{
+        margin: 0;
+        overflow: scroll;
+        padding: 0;
+        max-height: 100%;
+        width: 100%;
+        height: 389px;
+      } 
+      
+      .members li{
+        float: left;
+        width: 100%;
+        list-style: none;
+      }
+      
+      @media (min-width: 28.75em) {
+        .members li {
+          width: 50%;
+          min-width: 150px;
+          max-width: 174px;
+        }
+      }
     }
   }
-  
-  .about-header-container {
-    padding-top: 3rem;
-    padding-bottom: 4%;
-    align-content: center;
-    text-align: center;
-    font-family: minecraft;
-    font-variant: small-caps;
-    font-size: clamp(1rem, 3vw, 4rem);
-    color: #9f3228;
-  }
-  
-  .about-section-title {
-    font-family: minecraft;
-    font-size: clamp(1rem, 2vw, 2rem);
-    font-variant: small-caps;
-    color: #28779f;
-    margin-bottom: 100px;
-    font-weight: 10rem;
-  }
-  
-  .about-horizontal {
-    display: grid;
-    grid-auto-flow: column;
-    /* grid-auto-columns: 25%; */
-    padding: 2%;
-    padding-top: 2rem;
-    margin-inline: 10%;
-    justify-content: space-between;
-    background-color: #c4eaff;
-  
-  
-    overflow: scroll;
-    scrollbar-color: white;
-    .img-padding {
-      padding-right: 0.5rem;
-    }
-  }
-  
-  .about-horizontal img {
-    width: clamp(4rem, 11vw, 13rem);
-    /* max-width: clamp(10rem, 25vw, 25rem); */
-    border-radius: 10%;
-    border-color: #000;
-    border-width: 1px;
-    border-style: double;
-    background-color: rgb(198, 198, 198); 
-  }
 }
 
-.btn-committee-names button{
-  background-color: palevioletred;
-  border:1px solid rgb(180, 95, 124);
-  a{
-    color: white;
-  }
-  
-  cursor:pointer;
-  display: block;
-  padding: 10px 24px;
-  width: 50%;
-}
-
-.btn-committee-names button{
-  background-color: palevioletred;
-  border:1px solid rgb(180, 95, 124);
-  a { color: white; }
-  
-  cursor:pointer;
-  display: block;
-  padding: 10px 24px;
-  width: 50%;
-}
-
-.btn-committee-names:not(:last-child){
-  border-bottom: none;
-}
-
-.btn-committee-names button:hover{
-  background-color: rgb(248, 40, 109);
-  
-}
-
-.members img{
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.members{
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
-} 
-
-.members li{
-  float: left;
-  width: 100%;
-  list-style: none;
-}
-
-@media (min-width: 28.75em) {
-  .members li {
-    width:25%;
-  }
-  
-}
-
-figure{
+figure {
   margin: 0 1.25em 1.25em 0;
   position: relative;
   text-align: center;
   border: 0.5em solid palevioletred;
   border-radius: 0.5em;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 figure:hover{
@@ -489,7 +438,6 @@ figure:hover{
     bottom: 70%;
     padding: 0;
   }
-
 }
 
 figcaption{
@@ -557,9 +505,7 @@ figcaption{
   -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
 }
 
-.arrow {
-  padding-right: 1rem;
-}
+.arrow { padding-right: 1rem; }
 
 .FAQ {
   .faq-collapse-container {
@@ -608,38 +554,79 @@ figcaption{
       outline: none;
       box-sizing: border-box;
       border: 2px solid rgba(0, 0, 0, 0.02);
+      margin-bottom: 50px;
       text-align: center;
       margin-bottom: 27px;
       font-family: 'Ubuntu', sans-serif;
     }
 
-
+    .submitBubble {
+      color: rgb(38, 50, 56);
+      font-weight: 700;
+      font-size: 14px;
+      letter-spacing: 1px;
+      background-color: rgb(62, 141, 211);
+      padding: 10px 20px;
+      border: none;
+      border-radius: 20px;
+      outline: none;
+      box-sizing: border-box;
+      border: 2px solid rgba(0, 0, 0, 0.02);
+      margin-bottom: 50px;
+      text-align: center;
+      margin-bottom: 27px;
+      font-family: 'Ubuntu', sans-serif;
+      cursor: pointer;
+      
+    }
+    .submitBubble:hover {
+      background-color: rgb(44, 19, 153);
+      color: white;
+      flex-direction: column;
+      align-self: center;
+    } 
   }
+}
 
-  .submitBubble {
-    color: rgb(38, 50, 56);
-    font-weight: 700;
-    font-size: 14px;
-    letter-spacing: 1px;
-    background-color: rgb(62, 141, 211);
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    box-sizing: border-box;
-    border: 2px solid rgba(0, 0, 0, 0.02);
-    margin-bottom: 50px;
-    text-align: center;
-    margin-bottom: 27px;
-    font-family: 'Ubuntu', sans-serif;
-    cursor: pointer;
-
-    
+.Portal {
+  background-color: white; 
+  padding: 1rem 2rem;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  min-height: 60vh;
+  
+  .apply {
+    height: clamp(2rem, 5vw, 8rem);
+    background-color: #fefeaa;
+    font-size: fit-content;
+    color: rgb(255, 126, 74);
+  
+    padding: 0.25rem 0.5rem;
+    /* text-shadow: 0px 1px 0px #000; */
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    border-color: #f5c499;
+    border-style: solid;
+    border-width: 0.2vw;
   }
-  .submitBubble:hover {
-    background-color: rgb(44, 19, 153);
-    color: white;
-    flex-direction: column;
-    align-self: center;
-  } 
+}
+
+.disabledButton {
+  color: rgb(81, 86, 89);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background-color: rgb(143, 141, 141);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: 'Ubuntu', sans-serif;
+  cursor: pointer;
 }
