--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -128,8 +128,6 @@
   }
 }
 
-
-
 @media only screen and (max-width: 1199px) {
   .About {
     .collaborators-container{
@@ -144,6 +142,19 @@
   }
 }
 
+@media only screen and (max-width: 900px) {
+  .members {
+    max-height: 300px;
+    overflow: scroll;
+  }
+  .committeeMembers-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: center;
+    gap: 1em;
+  }
+}
 @media only screen and (max-width: 800px) {
   .About {
     .who-we-are-container{
@@ -335,213 +346,66 @@
     -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
   }
 
-  .About{    
-    .logo-who-we-are{
-      max-width: 75%;
-    }
-    
-    .team-container{
-      display: flex;
-      width: 100%;
-    }
-    
-    
-    .team-child-container{
-      flex: 1;
-    }
-    
-    .headshot{
-      width: 100%;
-    }
-    
-    .committeeMembers-container{
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      align-items: center;
-      gap: 1em;
-    }
-    
-    .btn-committee-names button{
-      background-color: darkgray;
-      border:1px solid gray;
-      color: #000;
-      cursor:pointer;
-      display: block;
-      padding: 10px 24px;
-      width: 50%;
-    }
-    
-    .btn-committee-names:not(:last-child){
-      border-bottom: none;
-    }
-    
-    .btn-committee-names button:hover{
-      background-color: rgb(68, 68, 68);
-    }
-    
-    .about-header-container {
-      padding-top: 3rem;
-      padding-bottom: 4%;
-      align-content: center;
-      text-align: center;
-      font-family: minecraft;
-      font-variant: small-caps;
-      font-size: clamp(1rem, 3vw, 4rem);
-      color: #9f3228;
-    }
-    
-    .about-section-title {
-      font-family: minecraft;
-      font-size: clamp(1rem, 2vw, 2rem);
-      font-variant: small-caps;
-      color: #28779f;
-      margin-bottom: 100px;
-      font-weight: 10rem;
-    }
-    
-    .about-horizontal {
-      display: grid;
-      grid-auto-flow: column;
-      /* grid-auto-columns: 25%; */
-      padding: 2%;
-      padding-top: 2rem;
-      margin-inline: 10%;
-      justify-content: space-between;
-      background-color: #c4eaff;
-    
-    
-      overflow: scroll;
-      scrollbar-color: white;
-      .img-padding {
-        padding-right: 0.5rem;
-      }
-    }
-    
-    .about-horizontal img {
-      width: clamp(4rem, 11vw, 13rem);
-      /* max-width: clamp(10rem, 25vw, 25rem); */
-      border-radius: 10%;
-      border-color: #000;
-      border-width: 1px;
-      border-style: double;
-      background-color: rgb(198, 198, 198); 
-    }
+.About{    
+  .logo-who-we-are{
+    max-width: 75%;
   }
+}
 
-  .Button-sponsor-page{
-    background-color: rgb(255, 129, 120);
-    padding: 1rem 1rem;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    text-shadow: 0px 1px 0px #000;
-    filter: dropshadow(color=#000, offx=0px, offy=1px);
+  figure {
+    margin: 0 1.25em 1.25em 0;
     position: relative;
-    
-    -webkit-box-shadow:inset 0 1px 0 #ffcbcb, 0 10px 0 #441305;
-    /* -moz-box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b;
-    box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b; */
-    
-    border-radius: 5px;
-    border-color: #712020;
-    border-style: solid;
-    border-width: 0.35vw;
-    display: flex;
-    width: clamp(9rem, 40vw, 40rem);
-    height: clamp(4rem, 6vw, 10rem);
-  }
-
-  .Button-sponsor-page:hover{
-    top:10px;
-    background-color: rgb(255, 129, 120);
-    -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
-  }
-
-  .arrow {
-    padding-right: 1rem;
-  }
-
-  .FAQ {
-    .faq-collapse-container {
-      font-size: 1.3rem;
-      font-weight: 600;
-      border: none;
-      background: rgb(211, 228, 255);
-      font-family: bitter;
-      margin-bottom: 1rem;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-      
-
-    }
-    
-    .faq-collapse {
-      padding-top: 0.3rem;
-      border: none;
-      padding-left: 4rem;
-      display: flex;
-      font-family: bitter;
-      font-weight: 500;
-    }
-  }
-
-  .login-container {
-
-
-    .form-container {
-
-      .loginBubbles {
-      }
-
-
-    }
-
-    .submitBubble {
-      
-    }
-    .submitBubble:hover {
-
-    } 
-  }
-
-  .Portal {
-    background-color: white; 
-    padding: 1rem 2rem;
-    border-radius: 25px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    min-height: 60vh;
-    
-    .apply {
-      height: clamp(2rem, 5vw, 8rem);
-      background-color: #fefeaa;
-      font-size: fit-content;
-      color: rgb(255, 126, 74);
-    
-      padding: 0.25rem 0.5rem;
-      /* text-shadow: 0px 1px 0px #000; */
-      justify-content: center;
-      align-items: center;
-      border-radius: 5px;
-      border-color: #f5c499;
-      border-style: solid;
-      border-width: 0.2vw;
-    }
-  }
-
-  .disabledButton {
-    color: rgb(81, 86, 89);
-    font-weight: 700;
-    font-size: 14px;
-    letter-spacing: 1px;
-    background-color: rgb(143, 141, 141);
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    box-sizing: border-box;
-    border: 2px solid rgba(0, 0, 0, 0.02);
-    margin-bottom: 50px;
     text-align: center;
-    margin-bottom: 27px;
-    font-family: 'Ubuntu', sans-serif;
-    cursor: pointer;
+    border: 0.5em solid palevioletred;
+    border-radius: 0.5em;
   }
+  
+  figure:hover{
+    border: 0.5em solid rgb(248, 40, 109);
+    img {
+      opacity: 0.1;
+      transition: all .2s ease-in-out .2s;
+    }
+    figcaption {
+      top: 50%;
+      margin-top: -5em;
+    }
+    h3 h4 h5 {
+      bottom: 70%;
+      padding: 0;
+    }
+    h3 {
+      font-size: 1rem;
+    }
+    h4 {
+      font-size: 1.9rem;
+    }
+  }
+}
+
+.Button-sponsor-page{
+  background-color: rgb(255, 129, 120);
+  padding: 1rem 1rem;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  text-shadow: 0px 1px 0px #000;
+  filter: dropshadow(color=#000, offx=0px, offy=1px);
+  position: relative;
+  
+  -webkit-box-shadow:inset 0 1px 0 #ffcbcb, 0 10px 0 #441305;
+  /* -moz-box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b;
+  box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b; */
+  
+  border-radius: 5px;
+  border-color: #712020;
+  border-style: solid;
+  border-width: 0.35vw;
+  display: flex;
+  width: clamp(9rem, 40vw, 40rem);
+  height: clamp(4rem, 6vw, 10rem);
+}
+
+.Button-sponsor-page:hover{
+  top:10px;
+  background-color: rgb(255, 129, 120);
+  -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
 }
