--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -421,7 +421,7 @@ figure {
   text-align: center;
   border: 0.5em solid palevioletred;
   border-radius: 0.5em;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 figure:hover{
@@ -433,11 +433,15 @@ figure:hover{
   figcaption {
     top: 50%;
     margin-top: -5em;
+    font-size: 0.8rem;
   }
-  h3 h4 h5 {
-    bottom: 70%;
-    padding: 0;
+
+  h3, h4 {
+    font-size: 0.8rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
   }
+  
 }
 
 figcaption{
@@ -446,6 +450,7 @@ figcaption{
   top: 100%;
   left: 0;
   transition: all 0.2s ease-in-out allow-discrete;
+  padding-top: 8%;
 }
 
 figcaption a {
@@ -457,23 +462,13 @@ figcaption a {
   color: white;
   border-radius: 1.25rem;
   padding-top: 0.5em;
-  width: 10rem;
+  width: 90%;
   height: 1.5rem;
+  margin-bottom: 8%;
 
   &:hover{
-    background-color: rgb(248, 40, 109) ;
+    background-color: rgb(248, 40, 109);
   }
-}
-
-figcaption{
-  position: absolute;
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  bottom: 100%;
-  color: #000;
-  text-shadow: 0 0 5em black;
 }
 
 /*MARIA HOW TO MAKE HOVER COLOR STAY ON ACTIVE BUTTON*/
