--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -475,3 +475,52 @@ a {
 .btn-committee-names button:hover{
   background-color: rgb(68, 68, 68);
 }
+
+
+/* Schedule JS */
+
+.tables-container {
+  /* putting contents of table side-by-side */
+  display: flex;
+  justify-content: space-around;
+}
+
+.backgroundSchedule {
+  background-color: rgba(0, 177, 196, 0.1);
+  border-radius: 10px;
+  width:45%;
+}
+
+table {
+  /* background color opacity changed but text of table remains visible */
+  opacity: 1; 
+  margin-left: 50px;
+  margin-bottom:40px;
+}
+
+.locationEvent{
+  font-size: 12px;
+  color: purple;
+}
+
+.presenter {
+  font-size: 13px;
+  font-style: italic;
+}
+
+.time {
+  padding-right: 60px;
+}
+
+.eventDescription{
+  padding-right: 40px;
+  padding-bottom: 5px;
+}
+
+th {
+  padding-bottom: 10px;
+}
+
+.activity {
+  padding-bottom: 25px;
+}
