--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -521,6 +521,50 @@ figcaption a {
   -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
 }
 
+.sponsor-logo-container {
+  justify-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 1.5rem;
+}
+
+.sponsor-logo-container img {
+  max-width: 80%;
+  max-height: 100%;
+  background-color: white;
+  object-fit: contain;
+  margin: 2% ;
+  padding: 2rem;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 7px;
+}
+
+
+.sponsor-logo-container img:nth-child(odd) {
+  width: 90%;
+  height: 150px;
+}
+
+.sponsor-logo-container img:nth-child(even) {
+  width: 90%;
+  height: 150px;
+
+}
+
+
+@media (max-width: 900px) {
+  .sponsor-logo-container {
+    grid-template-columns: 1fr; 
+    /* flex-direction: column;
+    align-items: center;  */
+  }
+
+  .sponsor-logo-container img {
+    padding: 1rem;
+    max-width: 60%;
+  }
+}
+
 .arrow { padding-right: 1rem; }
 
 .FAQ {
