--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -184,6 +184,14 @@
   }
 }
 
+@media only screen and (max-width: 750px) {
+  .FAQ {
+    .faq-collapse {
+      padding-left: 0.7rem;
+    }
+  }
+}
+
 @media only screen and (max-width: 650px) {
   .banner {
     max-width: 100%;
