--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -143,6 +143,14 @@
   }
 }
 
+@media  only screen and (max-width: 975px) {
+
+  .map iframe{
+    width: 20rem;
+    height: 10rem;
+  }
+}
+
 @media only screen and (max-width: 900px) {
   .members {
     max-height: 300px;
@@ -155,6 +163,8 @@
     align-items: center;
     gap: 1em;
   }
+
+
 }
 @media only screen and (max-width: 800px) {
   .About {
