--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -458,8 +458,8 @@ button:hover{ cursor: pointer; }
         flex: 2;
       }
       .btn-committee-names button{
-        background-color: palevioletred;
-        border:1px solid rgb(180, 95, 124);
+        background-color: #F07167;
+        border:1px solid #F07167;
         color: white;
         a { color: white; }
         text-align: center;
@@ -475,7 +475,7 @@ button:hover{ cursor: pointer; }
       }
 
       .btn-committee-names button:hover{
-        background-color: rgb(248, 40, 109);
+        background-color: #712020;
       }
     }
 
@@ -521,7 +521,7 @@ figure {
   margin: 0 1.25em 1.25em 0;
   position: relative;
   text-align: center;
-  border: 0.5em solid palevioletred;
+  border: 0.5em solid  #F07167;
   border-radius: 0.5em;
   overflow: scroll;
 
@@ -537,7 +537,7 @@ figure::-webkit-scrollbar {
 
 
 figure:hover{
-  border: 0.5em solid rgb(248, 40, 109);
+  border: 0.5em solid #712020;
   img {
     opacity: 0.1;
     transition: all .2s ease-in-out .2s;
@@ -568,7 +568,7 @@ figcaption{
 figcaption a {
   font-weight: bold;
   text-decoration: none;
-  background-color: palevioletred;
+  background-color: #F07167;
   display: inline-block;
   text-align: center;
   color: white;
@@ -579,7 +579,7 @@ figcaption a {
   margin-bottom: 8%;
 
   &:hover{
-    background-color: rgb(248, 40, 109);
+    background-color: #712020;
   }
 }
 
