--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -5,9 +5,11 @@
   /* background-image: url(./components/pictures/Blue-Purple_background.png);
   background-attachment: fixed;
   background-position: center;  */
-  /* min-height: 100vh; */
+  min-height: 95vh;
   height: 100%;
+
   padding-bottom: 5%;
+  margin-bottom: 0;
   
 }
 
@@ -153,6 +155,10 @@ button:hover{ cursor: pointer; }
     display: flex;
     padding: 0;
     column-gap: 2rem;
+  }
+
+  .lessSpace {
+    column-gap: 0rem;
   }
 
   .nav-btn {
@@ -762,11 +768,8 @@ figcaption a {
 }
 
 .Portal {
-  background-color: white; 
-  padding: 1rem 2rem;
-  border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  min-height: 60vh;
+  min-height: 70vh;
+  padding: 0;
   
   .apply {
     height: clamp(2rem, 5vw, 8rem);
@@ -783,6 +786,156 @@ figcaption a {
     border-style: solid;
     border-width: 0.2vw;
   }
+
+  .name-banner {
+    background-color:  rgb(255, 164, 157);
+    display: flex;
+    flex: auto;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    padding-inline: 2rem;
+    max-height: 10%;
+    overflow: hidden;
+    padding-bottom: 2%;
+
+    .message {
+      text-align: left;
+      color: rgb(34, 34, 56);
+      font-family: teacher-regular;
+      font-size: 1.2rem;
+
+      .welcome-message {
+        color: white;
+        font-size: 3.5rem;
+        margin-bottom: 0;
+      }
+    }
+
+    .character {
+      align-self: flex-end;
+      float: inline-end;
+      display: flex;
+      padding-bottom: 2%;
+      padding-top: 2%;
+      padding-left: 10%;
+      width: clamp(5rem, 10rem, 15rem);
+      height: auto;
+      margin-left: auto; 
+      margin-right: 0;
+      animation-name: floating;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+    }
+  }
+
+  .portal-padding {
+    padding-inline: 5%;
+    padding-bottom: 5%;
+  }
+
+}
+
+.modalBackground {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(44, 63, 90, 0.6);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 13;
+  top: 0;
+
+  .modalContainer {
+    justify-self: center;
+    width: clamp(20rem, 35rem, 45rem);
+    height: clamp(30rem, 35rem, 35rem);
+    border-radius: 12px;
+    border-image: linear-gradient(rgb(195, 149, 210), rgb(116, 173, 207)) 27 / 2rem;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+  }
+
+  .modalContainer .title {
+    display: inline-block;
+    text-align: center;
+    margin-top: 1%;
+  }
+
+  .titleCloseBtn {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 3%;
+    padding-right: 3%;
+  }
+
+  .titleCloseBtn button {
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  .titleCloseBtn button:hover {
+    color: #1b797e;
+  }
+
+  .modalContainer .body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7rem;
+    text-align: center;
+  }
+
+  .modalContainer .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: clamp(2rem, 4rem, 5rem);
+  }
+
+  .apply {
+    height: clamp(5rem, 5vw, 8rem);
+    width: 70%;
+    background-color: #fefeaa;
+    font-size: 3rem;
+    font-style: bold;
+    font-family: teacher-semibold;
+    color: rgb(255, 126, 74);
+    padding: 0.25rem 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    border-color: #f5c499;
+    border-style: solid;
+    border-width: 0.2vw;
+  }
+
+  .apply:hover {
+    color: rgb(207, 59, 0);
+  }
+}
+
+.application-banner {
+  text-align: center;
+  padding: 0.5%;
+  background: #fefeaa;
+  color: black;
+  border-color: rgb(206, 229, 238);
+  border-width: 0.1px;
+  border-bottom-style: solid;
+  font-family: teacher-regular;
+  font-size: 1.2rem;
+}
+
+.align-right {
+  margin-right: 0;
+  margin-left: auto;
 }
 
 .disabledButton {
@@ -802,4 +955,8 @@ figcaption a {
   margin-bottom: 27px;
   font-family: 'Ubuntu', sans-serif;
   cursor: pointer;
+}
+
+.padding {
+  margin: 4%;
 }
