--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -77,13 +77,13 @@ button:hover{ cursor: pointer; }
   padding: 1% 1% 0.25%;
   max-height: clamp(4rem, 5vw, 7rem);
   z-index: 12;
-  position: fixed; 
+  position: sticky; 
   top: 0;
   display: flex;
   flex: auto;
   justify-content: space-between;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  width: 100%;
+  /* width: 100%; */
 
   .logo-container {
     align-content: center;
