--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1011,3 +1011,29 @@ figcaption a {
 .padding {
   margin: 4%;
 }
+
+.button-glow{
+  color: #fff;
+  padding: 16px 34px;
+  box-shadow: 0 0 0 0 rgb(255, 126, 74);
+  -webkit-animation: glow 2s linear infinite;
+          animation: glow 2s linear infinite
+}
+
+@-webkit-keyframes glow {
+  0% {
+    box-shadow: 0 0 0 0 rgb(255, 126, 74);
+  }
+  50% {
+    box-shadow: 0 0 30px 0 rgb(255, 126, 74);
+  }
+}
+
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 0 0 rgb(255, 126, 74);
+  }
+  50% {
+    box-shadow: 0 0 40px 0 rgb(255, 126, 74);
+  }
+}
