--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -589,3 +589,42 @@
     -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
   }
 }
+
+@media only screen and (max-width: 650px) {
+  .countdown-text {
+    font-size: 20px;
+  }
+
+  .countdown-item {
+    font-size: 20px;
+  }
+
+}
+
+@media only screen and (max-width: 500px) {
+  .countdown-text {
+    font-size: 18px;
+  }
+
+  .countdown-item {
+    font-size: 18px;
+  }
+  .countdown-label {
+    font-size: 12px;
+  }
+
+}
+
+@media only screen and (max-width: 415px) {
+  .countdown-text {
+    font-size: 16px;
+  }
+
+  .countdown-item {
+    font-size: 16px;
+  }
+  .countdown-label {
+    font-size: 12px;
+  }
+
+}
